# video-use1

./: .env.example  .gitignore  SKILL.md  generate_script.py  pyproject.toml  setup.bat  start_bot.bat
.github/workflows/: generate_video.yml
.superpowers/sdd/: progress.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md
bot/: bot.py  notify.py  setup_verticals.py
docs/superpowers/plans/: 2026-06-19-quickkick-morning-automation.md
docs/superpowers/specs/: 2026-06-19-morning-automation-design.md
helpers/: grade.py  ken_burns.py  youtube_stats.py
presets/: elvis-niche.yaml  elvis-youtube.md  mj-niche.yaml  mj-youtube.md
quickkick_bot/: __init__.py  approval.py  clip_selector.py  contact_sheet.py  drive_pool.py  image_matcher.py  image_prep.py  morning_runner.py  pipeline.py  planner.py  render.py  settings.py  state.py  upscale_library.py
quickkick_bot/tools/: prepare_vertical_photos.py
tests/quickkick_bot/: __init__.py  test_approval.py  test_drive_pool_and_matcher.py  test_image_prep.py  test_import_smoke.py  test_planner_and_render.py  test_settings_and_state.py
