[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "httpx",
    "librosa",
    "matplotlib",
    "numpy",
    "openai",
    "pillow",
    "python-dotenv",
    "python-telegram-bot[job-queue]>=20.0",
    "requests",
]
