[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "httpx",
    "librosa",
    "matplotlib",
    "numpy",
    "openai",
    "open-clip-torch",
    "pillow",
    "python-dotenv",
    "python-telegram-bot[job-queue]>=20.0",
    "requests",
    "torch",
]
